<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:autofillHints="@string/edit_text"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/edit_text"
                android:inputType="text" />

            <TextView
                android:id="@+id/toppingTextView"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/toppings_textView"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:text="@string/whipped_cream_checkbox"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/chocolate_topping_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:text="@string/chocolate_checkbox"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantityText"
                style="@style/HeaderTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity_textView"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="@string/decrement_button" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/quantity"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="@string/increment_button" />

            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="submitOrder"
                android:text="@string/submit_button"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>